@@ -61,6 +61,8 @@ BSON_BEGIN_DECLS
 #define WIRE_VERSION_COLLATION 5
 /* first version to support OP_MSG */
 #define WIRE_VERSION_OP_MSG 6
+/* first version to support array filters for "update" command */
+#define WIRE_VERSION_ARRAY_FILTERS 6
 /* first version to support retryable writes  */
 #define WIRE_VERSION_RETRY_WRITES 6
 
