@@ -6,6 +6,8 @@ Next Release
     error replies.
   * All "destroy" functions such as bson_destroy or mongoc_collection_destroy
     now ignore a NULL argument.
+  * The driver now returns an error if you attempt to use "arrayFilters" in an
+    update with a MongoDB server older than 3.6.
   * Update functions include a new "upsertedCount" field in the reply document.
   * Functions incorrectly marked with the "const" compiler attribute are now
     marked as "pure".
